--- a/templates/components/client_info.html
+++ b/templates/components/client_info.html
@@ -15,12 +15,7 @@
       </div>
       <div class="col-md-6">
         <label class="form-label">Secondary Number</label>
-        <input
-          type="tel"
-          class="form-control"
-          name="secondary_number"
-          maxlength="10"
-        />
+        <input type="tel" class="form-control" name="secondary_number" maxlength="10" />
       </div>
       <div class="col-md-6">
         <label class="form-label">Email</label>
@@ -28,23 +23,14 @@
       </div>
       <div class="col-md-6">
         <label class="form-label">Current Location</label>
-        <select
-          class="form-select select2-location"
-          name="current_location"
-          id="currentLocation"
-        >
+        <select class="form-select select2-location" name="current_location" id="currentLocation">
           <option value="">Select current location</option>
           <!-- Options will be loaded dynamically -->
         </select>
       </div>
       <div class="col-md-6">
         <label class="form-label">Building Name</label>
-        <input
-          type="text"
-          class="form-control"
-          name="building_name"
-          placeholder="Enter building name"
-        />
+        <input type="text" class="form-control" name="building_name" placeholder="Enter building name" />
       </div>
       <div class="col-md-6">
         <label class="form-label">Lead Source</label>
@@ -67,13 +53,14 @@
 
       <div class="col-md-6">
         <label class="form-label">Lead Source Project</label>
-        <input
-          type="text"
-          class="form-control"
-          name="lead_source_project"
-          placeholder="Project that generated lead"
-        />
+        <select class="form-select" name="lead_source_project">
+          <option value="">Select a project</option>
+          {% for project in projects %}
+          <option value="{{ project.name }}">{{ project.name }}</option>
+          {% endfor %}
+        </select>
       </div>
+
 
       <!-- 🆕 New Ethnicity Field -->
       <div class="col-md-6">
@@ -93,6 +80,19 @@
           <option value="Parsi">Parsi</option>
         </select>
       </div>
+      <div class="col-md-6">
+        <label class="form-label">Profession</label>
+        <select class="form-select" name="profession">
+          <option value="">Select profession</option>
+          <option value="Salaried">Salaried</option>
+          <option value="Self-Employed">Self-Employed</option>
+          <option value="Business Owner">Business Owner</option>
+          <option value="Student">Student</option>
+          <option value="Retired">Retired</option>
+          <option value="Other">Other</option>
+        </select>
+      </div>
+
     </div>
   </div>
 </div>
